--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-This file was created by JetBrains PhpStorm 6.0.1 for binding GitHub repository
+Accounts example system gateway plugin for WordPress WooCommerce
